# boom_tetris

./: .clangformat  .gitignore  CMakeLists.txt  Makefile  README.md  boom_build.bat  boom_build.sh  build.sh  compile_commands.json  format.sh  main.cpp  rayui.hpp  score.cpp  score.hpp  tetris.cpp  tetris.hpp  todo.txt
.cache/clangd/index/: main.cpp.7C4FE189C474AFAD.idx
rayui/: Makefile  main.cpp  rayui.cpp  rayui.hpp
tetris/: boom_tetris_linux
